--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,10 @@
+// Import partials
+@import 'utilities';
+@import 'config';
+@import 'btnConfig';
+
+
+
 
 * {
   box-sizing: border-box;
@@ -19,7 +26,6 @@ a {
   text-decoration: none;
 }
 
-.hero {
   // This is where the bulk of the SCSS styling needs to be done
 
   // Take a look at the other files we've built already. How can they be useful here?
@@ -28,6 +34,55 @@ a {
   // 1. $variables
   // 2. nesting (dont forget about the ampersand (&) parent selector!)
   // 3. At-Rules
+
+
+.hero {
+  @include set-bg($primary-color);
+  height: 600px;
+
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    ul {
+      display: flex;
+      list-style: none;
+    }
+
+    li {
+      padding: 10px;
+    }
+
+    a {
+      color: text-color-picker($primary-color);
+    }
+
+    a:hover {
+      color: $secondary-color
+    }
+
+    &-content {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 30px;
+
+      img {
+        width: 50%;
+      }
+
+      h1 {
+        font-size: 50px;
+        height: 1.2;
+      }
+
+    }
+
+  }
+
+
 }
 
 // This code is related to some of the aspects of SCSS we have yet to cover.
